# stakepulse

./: .gitignore  README.md  vercel.json
contract/: Cargo.toml
contract/src/: lib.rs  test.rs
frontend/: .env.example  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: ClientApp.tsx  CreatePredictionModal.tsx  Header.tsx  Leaderboard.tsx  PredictionCard.tsx  PredictionList.tsx  RulesModal.tsx  Ticker.tsx  WalletModal.tsx
frontend/src/hooks/: usePredictions.ts  useWallet.ts
frontend/src/lib/: contract.ts
frontend/src/types/: index.ts
