[package]
name = "stakepulse"
version = "0.1.0"
edition = "2021"
publish = false
resolver = "2"
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "26.0.0-rc.1", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "26.0.0-rc.1", features = ["testutils"], default-features = false }
rand = "0.8.5"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[patch.crates-io]
hashbrown = { git = "https://github.com/rust-lang/hashbrown", tag = "v0.14.5" }